<resources>
    <string name="app_name">Solidariedade Diária</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="institution">Institution</string>
    <string name="movements">Movements</string>
    <string name="user_info">User Info</string>
    <string name="others">Others</string>
    <string name="support">Support</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_string">Don\'t have account? <b>Sign Up</b></string>
    <string name="have_account">Already have an account? <b>Login</b></string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
</resources>
