<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_institution"
            android:title="@string/institution" />
        <item
            android:id="@+id/nav_movements"
            android:title="@string/movements" />
        <item
            android:id="@+id/nav_user_info"
            android:title="@string/user_info" />
    </group>

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/nav_support"
                android:title="@string/support" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
